first version with editor. added license and ackn.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.0-beta.10",
-    "campfire.js": "^2.2.2",
-    "esbuild": "^0.13.4"
+    "@types/codemirror": "^5.60.4",
+    "campfire.js": "^2.2.3",
+    "codemirror": "^5.63.1",
+    "esbuild": "^0.13.4",
+    "marked": "^3.0.7"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.0-beta.8"
