--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "app"
+name = "rite"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
+description = "Your new distraction-free writing app."
+authors = ["shantaram"]
+license = "MIT"
 repository = ""
-default-run = "app"
+default-run = "rite"
 edition = "2018"
 build = "src/build.rs"
 
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
+tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "fs-read-text-file", "fs-write-file", "notification-all"] }
 dirs = "4.0.0"
 
 [features]
