--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "fs-read-text-file", "fs-write-file", "notification-all"] }
+tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "fs-create-dir", "fs-read-text-file", "fs-write-file", "notification-all", "path-all"] }
 dirs = "4.0.0"
 
 [features]
