--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "marked": "^3.0.7"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.0-beta.8"
+    "@tauri-apps/api": "^1.0.0-beta.8",
+    "macrolight": "^1.3.1"
   },
   "license": "MIT"
 }
