--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
-                  releaseName: "App v__VERSION__"
-                  body: "See the assets to download this version and install."
-                  draft: true
+                  releaseName: "rite v__VERSION__"
+                  releaseBody: "# rite v__VERSION__:\n See the assets to download and install this version."
+                  releaseDraft: true
                   prerelease: false
