--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0-beta.10",
+    "@tauri-apps/api": "^1.0.0-beta.8",
+    "@tauri-apps/cli": "1.0.0-beta.4",
     "@types/codemirror": "^5.60.4",
     "campfire.js": "^2.3.0",
     "codemirror": "^5.63.1",
@@ -12,7 +13,6 @@
     "marked": "^3.0.7"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.0-beta.8",
     "macrolight": "^1.3.1"
   },
   "license": "MIT"
