remove macOS note from gh actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,10 +42,6 @@ jobs:
                     
                         Note that Windows users will need to have 
                         [WebView2](https://developer.microsoft.com/en-us/microsoft-edge/webview2/)
-                        installed.
-
-                        
-                        Additionally, the macOS build currently does not work on systems other than
-                        Big Sur."
+                        installed."
                     releaseDraft: true
                     prerelease: false
