--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rite"
-version = "0.4.2"
+version = "0.5.0"
 description = "Your new distraction-free writing app."
-authors = ["shantaram"]
+authors = ["shantaram <me@shantaram.xyz>"]
 license = "MIT"
 repository = ""
 default-run = "rite"
-edition = "2018"
+edition = "2021"
 build = "src/build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,9 +17,10 @@ tauri-build = { version = "1.0.0-beta.4" }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = ["dialog-all", "fs-all", "fs-create-dir", "fs-read-text-file", "fs-write-file", "notification-all", "os-all", "path-all"] }
+tauri = { git = "https://github.com/tauri-apps/tauri", features = ["cli", "dialog-all", "fs-all", "fs-create-dir", "fs-read-text-file", "fs-write-file", "notification-all", "os-all", "path-all"] }
 dirs = "4.0.0"
 rand = "0.8"
+clap = "2.33"
 
 [features]
 default = [ "custom-protocol" ]
