change workflow to create draft by default

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,5 +48,5 @@ jobs:
             For Linux, only a .deb build is currently available -- the [Tauri AppImage is
             currently broken](https://github.com/tauri-apps/tauri/issues/2805),
             so you'll have to build from source if you're not on a Debian-based distro."
-          releaseDraft: false
+          releaseDraft: true
           prerelease: false
