--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.0
-      - name: install dependencies and build app
-        run: yarn && yarn tauri build
+      - name: install npm dependencies
+        run: yarn
+      - name: install rust cli
+        run: cargo install tauri-cli --git https://github.com/tauri-apps/tauri
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -50,3 +52,4 @@ jobs:
             so you'll have to build from source if you're not on a Debian-based distro."
           releaseDraft: true
           prerelease: false
+          tauriScript: "cargo tauri build"
