--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "rite"
-version = "0.12.3"
+version = "0.12.4"
 description = "Your new distraction-free writing app."
 authors = ["shantaram <me@shantaram.xyz>"]
 license = "MIT"
-repository = ""
+repository = "https://github.com/xyzshantaram/rite"
 default-run = "rite"
 edition = "2021"
 build = "src/build.rs"
