--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@tauri-apps/api": "^1.0.0-beta.8",
+    "@tauri-apps/api": "^1.2.0",
     "@tauri-apps/cli": "^1.0.0-beta.10",
     "@types/codemirror": "^5.60.4",
     "@types/crypto-js": "^4.0.2",
