--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,13 +12,13 @@ build = "src/build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.4", features = [] }
+tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
 serde_derive = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { git = "https://github.com/tauri-apps/tauri", features = ["cli", "dialog-all", "fs-all", "fs-read-text-file", "http-all", "notification-all", "os-all", "path-all", "shell-open"] }
+tauri = { version = "1.2.2", features = ["cli", "dialog-all", "fs-all", "http-all", "notification-all", "os-all", "path-all", "process-all", "shell-open", "window-all"] }
 dirs = "4.0.0"
 rand = "0.8"
 clap = "2.33"
