--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "1.2.1", features = [] }
 serde_derive = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.2", features = ["cli", "dialog-all", "fs-all", "http-all", "notification-all", "os-all", "path-all", "process-all", "shell-open", "window-all"] }
+tauri = { version = "1.2.2", features = ["cli", "dialog-all", "fs-all", "global-shortcut-all", "http-all", "notification-all", "os-all", "path-all", "process-all", "shell-open", "window-all"] }
 dirs = "4.0.0"
 rand = "0.8"
 clap = "2.33"
