--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
-      - name: install Rust nightly
+      - name: install Rust stable
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
